# vtol_behavior_manager

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  Makefile  PROGRESS.txt  QGroundControl.ini  README.md  docker-compose.yml  fastdds-debug.xml  install-neural-services.sh  justfile  pyproject.toml  tasks.json
.github/: LICENSE
.tmuxp/: vtol-interface-2x2.yaml
agent_bins/: py_exec  python  ros_exec
docker/: px4-gazebo.dockerfile  qgc5.dockerfile  ros2.dockerfile
dockerfiles/: bht.dockerfile  bht.native.Dockerfile  bht.prep.Dockerfile  bht_entrypoint.sh  px4-deps.dockerfile  px4-gazebo.dockerfile  qgc-deps.dockerfile  qgc5.dockerfile  ros2.dockerfile  ros2.native.Dockerfile  ros2.prep.Dockerfile  ros2_entrypoint.sh
docs/: MUST_KNOW.md  docker-compose-build.md  export_directory_structure.md  journalctl_audit_guide.md  sse_frontend_audit_guide.md
docs/scenario/: backward_compatibility.md  bootstrap_status_marker.md  failure_handling.md  infer_concats_features_in_metadata_order.md  infer_handles_none_features_with_zero_padding.md  infer_raises_error_for_missing_feature.md  integration-missing-setup-path.md  integration-pythonpath-inheritance.md  integration-ros-distro-resolution.md  ros_distro_diagnostics.md  ros_distro_resolution.md  ros_sensor_bridge_updates_provider_state.md  ros_setup_file_discovery.md  setup_path_diagnostics.md  unit-argument-order-preservation.md  unit-bootstrap-failure-exit.md  unit-ros-bootstrap-prepends-source.md
helper_scripts/: analyze_policy.py
log_streamer/: main.py
log_streamer/static/: index.html  style.css
scripts/: AGENTS.md  _precommit_disable_remove_px4msg.sh  build.sh  build_px4.sh  build_px4_gazebo.sh  build_qgc.sh  build_ros2.sh  build_ros2_podman.sh  clean.sh  clean_px4.sh  config_px4msg.sh  config_px4msgs.sh  develop_ros2.sh  df_docker.sh  docker_down.sh  docker_restart.sh  docker_up.sh  enter_px4.sh  enter_ros2.sh  example.sh  full_build.sh  killall.sh  neural_infer.sh  neural_mode.sh  ros_exec  ros_wrapper.sh  run_px4.sh  run_qgc.sh  run_ros2.sh  run_ros2_podman.sh
services/: README.md  install-neural-services.sh  neural.target  neural_executor.service  neural_gate.service  neural_infer.service  ros2-liveness.service  sim-session.service  test.target  test_executor.service  test_executor_README.md
src/features/: __init__.py  feature_provider_base.py  vtol_feature_provider.py
src/features/docs/scenario/: validation_fails_on_dimension_mismatch.md  validation_fails_on_missing_provider.md  validation_passes_with_all_features.md  validation_uses_discovered_revision.md
src/features/tests/: __init__.py  conftest.py
src/features/tests/scenario/: __init__.py  conftest.py
src/goal_msgs/: CMakeLists.txt  package.xml
src/goal_msgs/msg/: GoalAcro.msg  GoalHover.msg  NeuralTarget.msg
src/isaac_pos_ctrl_neural/: CMakeLists.txt
src/isaac_pos_ctrl_neural/isaac_pos_ctrl_neural/: __init__.py  isaac_pos_ctrl_node.py  math_utils.py  set_target_pos.py
src/neural_inference/: package.xml  setup.cfg  setup.py
src/neural_inference/config/: neural_infer_params.yaml
src/neural_inference/launch/: neural_gate.launch.py
src/neural_inference/neural_manager/neural_inference/: __init__.py  activation_watcher.py  math_utils.py  neural_infer.py
src/neural_manager/: model_discovery.py
src/neural_manager/neural_executor/: CMakeLists.txt  package.xml
src/neural_manager/neural_executor/config/: demo.yaml
src/neural_manager/neural_executor/include/neural_executor/: executor.hpp  executor_entry_mode.hpp  mavlink_logger.hpp  neural_ctrl_mode.hpp  neural_manual_mode.hpp  test_executor.hpp  test_executor_entry_mode.hpp  test_neural_manual_mode.hpp
src/neural_manager/neural_executor/launch/: neural_demo.launch.py  neural_executor.launch.py  test_neural_executor.launch.py
src/neural_manager/neural_executor/scripts/: joystick_readiness_probe.py
src/neural_manager/neural_executor/src/: main_test.cpp
src/neural_manager/neural_gate/: CMakeLists.txt  package.xml
src/neural_manager/neural_gate/launch/: neural_gate.launch.py
src/neural_manager/neural_gate/src/: neural_gate.cpp  neural_gate_acro.cpp  neural_gate_common.hpp  neural_gate_hover.cpp
src/neural_manager/neural_inference/: .pre-commit-config.yaml  math_utils.py  neural_infer.py  pytest.ini  readiness_checker.py  run_tests  setup_tensorrt_venv.sh  vtol_hover.fp16.engine  vtol_inference_node.py
src/neural_manager/neural_inference/adaptation_pipeline/: __init__.py  pipeline.py
src/neural_manager/neural_inference/adaptors/: __init__.py  adaptation_config.py  adaptor_registry.py  px4_vehicle_odometry.py  sensor_adapter.py
src/neural_manager/neural_inference/communicators/: __init__.py  communicator_registry.py  ros2_px4_odometry.py
src/neural_manager/neural_inference/config/: adaptation_config.yaml  model_schema.yaml  pos_ctrl_config.yaml
src/neural_manager/neural_inference/control/: __init__.py  action_post_processor.py  control_publisher.py
src/neural_manager/neural_inference/features/: __init__.py  feature_provider_base.py  protocols.py  revision_context.py  revision_discoverer.py  vtol_feature_provider.py
src/neural_manager/neural_inference/inference/: __init__.py  actors.py  (+2 more)
src/neural_manager/neural_pos_ctrl/: ADAPTATION_NOTES.md  ADAPTATION_REPORT.md  README_CN.md  gru_executor.py  math_utils.py  mlp_executor.py  neural_infer.py
src/neural_manager/tdd-summary/: step-1.md  step-2.md  step-3.md  step-4.md  step-5.md  step-6.md  step-7.md
tdd-summary/: step-1.md  step-2.md  step-3.md
test/: conftest.py  test_action_metadata.py  test_feature_providers.py  test_math_utils.py
test/discovery/: test_discover_latest_revision.py  test_export_revision_discoverer.py  test_feature_spec_simplified.py  test_from_latest_revision.py  test_load_metadata_low_dim.py  test_parse_revision_name.py  test_remove_dtype_description.py  test_validate_revision.py
test/integration/: test_goal_flow.py
test/scenario/: test_executor_readiness.py
tests/scenario/: test_feature_spec_simplified.py  test_remove_dtype_description.py
(+73 files in other folders)
