[project]
authors = [
  {name = "Hanamy", email = "rongerch@outlook.com"},
]
dependencies = [
  "numpy",
  "matplotlib",
  "pandas",
  "seaborn",
  "onnxruntime",
  "hydra-core",
]

description = "Inference python"
license = {text = "BSD"}
name = "neural-inference"
readme = "README.md"
requires-python = "~=3.10.0"
version = "0.1.0"