[project]
authors = [
  {name = "Hanamy", email = "rongerch@outlook.com"},
]
dependencies = [
  "numpy",
  "matplotlib",
  "pandas",
  "seaborn",
  "onnxruntime",
  "hydra-core",
  "eclipse-zenoh", # for px4 firmware debugs
]
description = "Inference python"
license = {text = "BSD"}
name = "neural-inference"
readme = "README.md"
requires-python = "~=3.10.0"
version = "0.1.0"

[tool.ruff]
line-length = 99
target-version = "py310"
indent-width = 2
exclude = ["src/px4_msgs", "src/px4-ros2-interface-lib", "deps"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E402", "F841", "F401"]

[tool.pytest.ini_options]
asyncio_mode = "auto"


[project.optional-dependencies]
dev = [
  "ruff==0.14.0",
  "pytest",
  "pytest-asyncio"
]
