<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>neural_executor</name>
  <version>0.0.1</version>
  <description>Neural Control Demo with integrated RC triggering and comprehensive failsafe mechanisms</description>
  <!-- Original author: Arclunar <zhenghw23@foxmail.com> -->
  <maintainer email="rongerch@outlook.com">WarriorHanamy</maintainer>
  <license>BSD-3-Clause</license>

  <depend>Eigen3</depend>
  <depend>rclcpp</depend>
  <depend>px4_ros2_cpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>px4_msgs</depend>
  <depend>yaml_cpp_vendor</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
